# PulseRateDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/ankurkhandelwal/example/com/pchambinodemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Pulse.cpp  native-lib.cpp  pt_chambino_p_pulse_Pulse.cpp  pt_chambino_p_pulse_Pulse_Face.cpp
app/src/main/cpp/profiler/: Profiler.h
app/src/main/java/ankurkhandelwal/example/com/pchambinodemo/: MainActivity.java  Pulse.java
app/src/main/java/ankurkhandelwal/example/com/pchambinodemo/android/: MyCameraBridgeViewBase.java  MyJavaCameraView.java
app/src/main/java/ankurkhandelwal/example/com/pchambinodemo/dialog/: BpmDialog.java  ConfigDialog.java
app/src/main/java/ankurkhandelwal/example/com/pchambinodemo/view/: BpmView.java  PulseView.java
app/src/main/res/layout/: activity_main.xml  app.xml  bpm.xml
app/src/main/res/menu/: app.xml
app/src/main/res/values/: strings.xml
app/src/test/java/ankurkhandelwal/example/com/pchambinodemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/src/main/java/org/opencv/android/: AsyncServiceHelper.java
